--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - $(aws ecr get-login --no-include-email)
+      - aws ecr get-login-password | 
+          docker login --username AWS --password-stdin $ECR_ENDPOINT
   build:
     commands:
       - IMAGE_TAG=$PROJECT_VERSION-$(date +%Y%m%d)
