--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,11 +8,13 @@ phases:
     commands:
       - IMAGE_TAG=$PROJECT_VERSION-$(date +%Y%m%d)
       - docker build .
-          -t ${ECR_ENDPOINT}/libz:$IMAGE_TAG
+          -t $ECR_ENDPOINT/libz:$IMAGE_TAG
           --build-arg RSI_CLIENT_ID=$RSI_CLIENT_ID
           --build-arg RSI_AUTH_REDIRECT_URL=$RSI_AUTH_REDIRECT_URL
   post_build:
     commands:
-      - docker push ${ECR_ENDPOINT}/libz:$IMAGE_TAG
+      - echo push $ECR_ENDPOINT/libz:$IMAGE_TAG >> Amazon ECR
+      - docker push $ECR_ENDPOINT/libz:$IMAGE_TAG
 artifacts:
   files: tools/deploy.sh
+  discard-paths: yes
