--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,23 +9,20 @@ env:
 phases:
   pre_build:
     commands:
-      - echo login to Amazon ECR
       - aws ecr get-login-password | 
           docker login --username AWS --password-stdin ${ECR_ENDPOINT}
-      - echo login to DockerHub
       - echo ${DOCKER_HUB_TOKEN} |
           docker login -u ${DOCKER_HUB_USER} --password-stdin
   build:
     commands:
-      - IMAGE_TAG=${PROJECT_VERSION}-$(date +%Y%m%d)
-      - echo build image...
+      - export IMAGE_TAG=${PROJECT_VERSION}-$(echo ${CODEBUILD_RESOLVED_SOURCE_VERSION} | cut -c 1-7)
       - docker build .
           -t ${ECR_ENDPOINT}/libz:${IMAGE_TAG}
           --build-arg RSI_CLIENT_ID=${RSI_CLIENT_ID}
           --build-arg RSI_AUTH_REDIRECT_URL=${RSI_AUTH_REDIRECT_URL}
   post_build:
     commands:
-      - echo push ${ECR_ENDPOINT}/libz:${IMAGE_TAG} >> Amazon ECR
+      - echo "push ${ECR_ENDPOINT}/libz:${IMAGE_TAG} to Amazon ECR"
       - docker push ${ECR_ENDPOINT}/libz:${IMAGE_TAG}
 artifacts:
   files: tools/deploy.sh
