--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,29 +2,33 @@ version: 0.2
 env:
   variables:
     PROJECT_VERSION: 1.0.0
+  exported-variables:
+    - IMAGE_TAG
   parameter-store:
     DOCKER_HUB_USER: /libz/dockerhub/user
     DOCKER_HUB_TOKEN: /libz/dockerhub/token
     ECR_ENDPOINT: /libz/ecr/endpoint
-    ECR_REGION: /libz/ecr/region
     RSI_CLIENT_ID: /libz/app/rsi/client-id
     RSI_AUTH_REDIRECT_URL: /libz/app/rsi/auth-redirect-url
 
 phases:
   pre_build:
+    on-failure: ABORT
     commands:
-      - aws ecr get-login-password --region ${ECR_REGION} | 
+      - export IMAGE_TAG=${PROJECT_VERSION}-$(echo ${CODEBUILD_RESOLVED_SOURCE_VERSION} | cut -c 1-7)
+      - aws ecr get-login-password |
           docker login --username AWS --password-stdin ${ECR_ENDPOINT}
       - echo ${DOCKER_HUB_TOKEN} |
           docker login -u ${DOCKER_HUB_USER} --password-stdin
   build:
+    on-failure: ABORT
     commands:
-      - export IMAGE_TAG=${PROJECT_VERSION}-$(echo ${CODEBUILD_RESOLVED_SOURCE_VERSION} | cut -c 1-7)
       - docker build .
           -t ${ECR_ENDPOINT}/libz:${IMAGE_TAG}
           --build-arg RSI_CLIENT_ID=${RSI_CLIENT_ID}
           --build-arg RSI_AUTH_REDIRECT_URL=${RSI_AUTH_REDIRECT_URL}
   post_build:
+    on-failure: ABORT
     commands:
       - echo "push libz:${IMAGE_TAG} to Amazon ECR"
       - docker push ${ECR_ENDPOINT}/libz:${IMAGE_TAG}
