--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,6 @@ version: 0.2
 env:
   variables:
     PROJECT_VERSION: 1.0.0
-  exported-variables:
-    - IMAGE_TAG
   parameter-store:
     DOCKER_HUB_USER: /libz/dockerhub/user
     DOCKER_HUB_TOKEN: /libz/dockerhub/token
@@ -32,8 +30,10 @@ phases:
     commands:
       - echo "push libz:${IMAGE_TAG} to Amazon ECR"
       - docker push ${ECR_ENDPOINT}/libz:${IMAGE_TAG}
+      - printf '{ "imageTag":"%s" }' $IMAGE_TAG > artifacts.json
 artifacts:
   files:
     - appspec.yml
+    - artifacts.json
     - tools/deploy.sh
   discard-paths: yes
