--- a/cloudformation/libz-ALB.yml
+++ b/cloudformation/libz-ALB.yml
@@ -24,6 +24,18 @@ Resources:
           Value: true
         - Key: routing.http.drop_invalid_header_fields.enabled
           Value: true
+        - Key: access_logs.s3.enabled
+          Value: true
+        - Key: access_logs.s3.bucket
+          Value: !ImportValue libz-bucket
+        - Key: access_logs.s3.prefix
+          Value: access
+        - Key: connection_logs.s3.enabled
+          Value: true
+        - Key: connection_logs.s3.bucket
+          Value: !ImportValue libz-bucket
+        - Key: connection_logs.s3.prefix
+          Value: connection
 
   AppTG:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -47,6 +59,14 @@ Resources:
           TargetGroupArn: !Ref AppTG
 
 Outputs:
+  OutputALBDNS:
+    Value: !GetAtt ALB.DNSName
+    Export:
+      Name: libz-alb-dns
+  OutputALBHZ:
+    Value: !GetAtt ALB.CanonicalHostedZoneID
+    Export:
+      Name: libz-alb-hz
   OutputAppTG:
     Value: !Ref AppTG
     Export:
