update build script for blue/green deployment.

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,19 +1,9 @@
 version: 0.0
-os: linux
-files:
-  - source: /
-    destination: /app
-file_exists_behavior: OVERWRITE
-hooks:
-  BeforeInstall:
-    - location: ./deploy_beforeinstall.sh
-      runas: root
-      timeout: 120
-  AfterInstall:
-    - location: ./deploy_afterinstall.sh
-      runas: root
-      timeout: 120
-  ApplicationStart:
-    - location: ./deploy_applicationstart.sh
-      runas: root
-      timeout: 120
+Resources:
+  - TargetService:
+      Type: AWS::ECS::Service
+      Properties:
+        TaskDefinition: <TASK_DEFINITION>
+        LoadBalancerInfo:
+          ContainerName: libz-app-container
+          ContainerPort: 80
