update build script for blue/green deployment.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -39,5 +39,6 @@ artifacts:
     - artifacts.json
     - imageDetail.json
     - imagedefinitions.json
+    - taskdef.json
     - tools/deploy_*.sh
   discard-paths: yes
