--- a/cloudformation/libz-VPC.yml
+++ b/cloudformation/libz-VPC.yml
@@ -46,6 +46,10 @@ Resources:
           ToPort: 80
           SourceSecurityGroupId: !Ref ALBSG
         - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
+          SourceSecurityGroupId: !Ref ALBSG
+        - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
           SourceSecurityGroupId: !Ref ALBSG
